--- a/modules/simd_constant/src/CMakeLists.txt
+++ b/modules/simd_constant/src/CMakeLists.txt
@@ -8,7 +8,7 @@
 ################################################################################
 
 include(NT2Module)
-nt2_module_source_setup(constant)
+nt2_module_source_setup(simd_constant)
 
 nt2_module_configure_include(nt2/toolbox/constant/constants -o nt2/toolbox/constant/include -o nt2/include/constants)
 nt2_module_configure_simd(nt2/toolbox/constant/constants)
