various fixes, invalid stray introduced by vim

--- a/modules/simd_constant/src/CMakeLists.txt
+++ b/modules/simd_constant/src/CMakeLists.txt
@@ -10,5 +10,5 @@
 include(NT2Module)
 nt2_module_source_setup(simd_constant)
 
-nt2_module_configure_include(nt2/toolbox/constant/constants -o nt2/toolbox/constant/include -o nt2/include/constants)
-nt2_module_configure_simd(nt2/toolbox/constant/constants)
+nt2_module_configure_include(boost/simd/toolbox/constant/constants -o boost/simd/toolbox/constant/include -o boost/simd/include/constants)
+nt2_module_configure_simd(boost/simd/toolbox/constant/constants)
