--- a/modules/simd_operator/src/CMakeLists.txt
+++ b/modules/simd_operator/src/CMakeLists.txt
@@ -9,7 +9,11 @@
 
 include(NT2Module)
 nt2_module_source_setup(simd_operator)
-nt2_module_configure_toolbox(operator 1)
+#nt2_module_configure_toolbox(operator 1)
+#the two lines below are equivalent to the macro call above
+
+nt2_module_configure_include(boost/simd/toolbox/operator/function -o boost/simd/toolbox/operator/include -o boost/simd/include/functions)
+nt2_module_configure_simd(boost/simd/toolbox/operator/function)
 
 include(nt2.preprocess)
 nt2_preprocess(operator.preprocess ${NT2_OPERATOR_ROOT}/include/nt2/toolbox/operator/specific/common.hpp
